<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/userimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/drawerimage"
        android:paddingTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profiledefault" />

    <TextView
        android:id="@+id/username"
        android:layout_width="261dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/yuvi_nagpal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/userimage"
        app:layout_constraintTop_toTopOf="@+id/userimage" />

    <TextView
        android:id="@+id/useremail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/yuvi_nagpal_gmail_com"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/userimage"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="86dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:onClick="loginbtnclicked"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userimage"
        app:layout_constraintVertical_bias="0.215" />

    <ImageButton
        android:id="@+id/channelbtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/imgbutton"
        android:onClick="channelbtnclicked"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/addchannelbutton" />

</android.support.constraint.ConstraintLayout>
